# trigonal

./: Cargo.toml  README.md
examples/: Cargo.toml
game/: Cargo.toml
game/src/: world.rs
graphics/: Cargo.toml
graphics/src/: init.rs
graphics_rendy/: Cargo.toml
graphics_rendy/src/: init.rs  lib.rs  main.rs
graphics_rendy/src/pipelines/: lines.rs  mod.rs  pipeline.rs
graphics_vulkano/: Cargo.toml
graphics_vulkano/src/: lib.rs
